--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
     <main>
@@ -12,7 +13,7 @@
             <div id="imagem">
                             
             </div>
-            <div id="Formulario">
+            <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faca seu login para acessar sua conta e poder fazer as configuracaoes no seu ambiente.</p>
                 <form action="login.php" method="post" autocomplete="on">
